Updated .gitignore to iglgfdkgsllmolola

--- a/views/deliverycenters.ejs
+++ b/views/deliverycenters.ejs
@@ -89,8 +89,11 @@
   <br></br>
   <!-- Search Bar -->
   <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Search delivery center">
-      <button class="btn btn-outline-secondary" type="button">Search</button>
+    <input
+    type="text"
+    id="searchInput"
+    class="form-control mb-3"
+    placeholder="Search..." />
   </div>
 
   <!-- Table -->
